JSHManager ChangeLog

Version 0.0.4
-------------
- Additional logging information is stored in data/logs.
- Corrected calculated rating rounding to be consistent with ScoreHero.
- Quick access to the Readme, ChangeLog, License, and logs has been added
  to the Help menu.
- Picture and video links are now saved when scores are downloaded.
- New scores can now be uploaded individually by first selecting the score
  and clicking "Upload Selected Score" in the "My Scores" menu or by
  pressing CTRL+U.
- The way passwords are stored has been changed to fix potential issues on
  some systems. If you previously saved your password, you will be required
  to re-save your password the next time you need to log in to ScoreHero.

Version 0.0.3
-------------
- Selected rows can now be expanded/collapsed via the right/left arrow keys
- Table cells for new scores can be edited simply by beginning to type if
  the cell is selected (has a dashed border around it). You can change the
  selected cell with the arrow keys. Note there is still an issue when
  editing the Comment cell causing text to be appended instead of replaced.
- Hit percentages are now orange between 80 and 99% and red when < 80%
  (same as on ScoreHero)
- Song data is now downloaded automatically the first time you try to
  download scores for a particular game/difficulty. This means it is no
  longer required to manually download song data unless new DLC comes out.

Version 0.0.2
-------------
- Fixed downloading scores for GH1/80s/OT (games that are only on one system)
- Scores are now sorted descending by points

Version 0.0.1
-------------
- Initial release