@@ -197,7 +197,6 @@
     </Component>
     <Component class="javax.swing.JComboBox" name="songCombo">
       <Properties>
-        <Property name="editable" type="boolean" value="true"/>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
           <StringArray count="0"/>
         </Property>
